--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,90 @@
+/* line 1, ../../xampp/htdocs/cmsOpgave/CMS-Opgave-Uge22-23/css/style.scss */
+.clear {
+  clear: both; }
+
+/* line 5, ../../xampp/htdocs/cmsOpgave/CMS-Opgave-Uge22-23/css/style.scss */
+.banner {
+  background-image: url(../img/headeredit.jpg);
+  height: 300px;
+  position: relative; }
+  /* line 9, ../../xampp/htdocs/cmsOpgave/CMS-Opgave-Uge22-23/css/style.scss */
+  .banner h1 {
+    position: absolute;
+    z-index: 2;
+    font-family: Blackadder ITC;
+    font-size: 72px;
+    color: black;
+    left: 65%; }
+
+/* line 19, ../../xampp/htdocs/cmsOpgave/CMS-Opgave-Uge22-23/css/style.scss */
+.icon {
+  text-align: center;
+  margin-top: 10px; }
+
+/* line 25, ../../xampp/htdocs/cmsOpgave/CMS-Opgave-Uge22-23/css/style.scss */
+nav ul {
+  margin: 5px 0 0 0;
+  padding: 0; }
+
+/* line 29, ../../xampp/htdocs/cmsOpgave/CMS-Opgave-Uge22-23/css/style.scss */
+nav li {
+  list-style: none;
+  display: inline-block;
+  padding: 0 30px; }
+
+/* line 34, ../../xampp/htdocs/cmsOpgave/CMS-Opgave-Uge22-23/css/style.scss */
+nav li:hover {
+  background-color: wheat; }
+
+/* line 37, ../../xampp/htdocs/cmsOpgave/CMS-Opgave-Uge22-23/css/style.scss */
+nav a {
+  text-decoration: none;
+  font-size: 20px;
+  color: black; }
+
+/* line 42, ../../xampp/htdocs/cmsOpgave/CMS-Opgave-Uge22-23/css/style.scss */
+nav a:hover {
+  color: violet; }
+
+/* line 48, ../../xampp/htdocs/cmsOpgave/CMS-Opgave-Uge22-23/css/style.scss */
+main img {
+  width: 100%; }
+
+/* line 51, ../../xampp/htdocs/cmsOpgave/CMS-Opgave-Uge22-23/css/style.scss */
+main p {
+  font-size: 20px; }
+
+/* line 56, ../../xampp/htdocs/cmsOpgave/CMS-Opgave-Uge22-23/css/style.scss */
+aside {
+  margin-left: 60px; }
+  /* line 58, ../../xampp/htdocs/cmsOpgave/CMS-Opgave-Uge22-23/css/style.scss */
+  aside .box {
+    height: 300px;
+    border: 2px solid blue;
+    border-radius: 10px; }
+  /* line 63, ../../xampp/htdocs/cmsOpgave/CMS-Opgave-Uge22-23/css/style.scss */
+  aside .headBox {
+    height: 75px;
+    width: 100%;
+    border-radius: 10px;
+    background-color: lightblue;
+    position: relative; }
+    /* line 69, ../../xampp/htdocs/cmsOpgave/CMS-Opgave-Uge22-23/css/style.scss */
+    aside .headBox p {
+      position: absolute;
+      top: 20%;
+      left: 15%;
+      color: blue;
+      font-size: 25px; }
+  /* line 78, ../../xampp/htdocs/cmsOpgave/CMS-Opgave-Uge22-23/css/style.scss */
+  aside .infoBox .textFrame {
+    margin-left: 10px; }
+  /* line 81, ../../xampp/htdocs/cmsOpgave/CMS-Opgave-Uge22-23/css/style.scss */
+  aside .infoBox input[type=text] {
+    width: 75%;
+    margin-left: 20px; }
+  /* line 85, ../../xampp/htdocs/cmsOpgave/CMS-Opgave-Uge22-23/css/style.scss */
+  aside .infoBox button {
+    margin-left: 70px; }
 
 /*# sourceMappingURL=style.css.map */
