--- a/css/style.scss
+++ b/css/style.scss
@@ -1,1 +1,89 @@
-@import 'variables';
+.clear {
+    clear: both;
+}
+
+.banner {
+    background-image: url(../img/headeredit.jpg);
+    height: 300px;
+    position: relative;
+    h1 {
+        position: absolute;
+        z-index: 2;
+        font-family: Blackadder ITC;
+        font-size: 72px;
+        color: black;
+        left: 65%;
+    }
+}
+
+.icon {
+    text-align: center;
+    margin-top: 10px;
+}
+
+nav {
+    ul {
+        margin: 5px 0 0 0;
+        padding: 0;
+    }
+    li {
+        list-style: none;
+        display: inline-block;
+        padding: 0 30px;
+    }
+    li:hover {
+        background-color: wheat;
+    }
+    a {
+        text-decoration: none;
+        font-size: 20px;
+        color: black;
+    }
+    a:hover {
+        color: violet;
+    }
+}
+
+main {
+    img {
+        width: 100%;
+    }
+    p {
+        font-size: 20px;
+    }
+}
+
+aside {
+    margin-left: 60px;
+    .box {
+        height: 300px;
+        border: 2px solid blue;
+        border-radius: 10px;
+    }
+    .headBox {
+        height: 75px;
+        width: 100%;
+        border-radius: 10px;
+        background-color: lightblue;
+        position: relative;
+        p {
+            position: absolute;
+            top: 20%;
+            left: 15%;
+            color: blue;
+            font-size: 25px;
+        }
+    }
+    .infoBox {
+        .textFrame {
+            margin-left: 10px;
+        }
+        input[type=text] {
+            width: 75%;
+            margin-left: 20px;
+        }
+        button {
+            margin-left: 70px;
+        }
+    }
+}
