--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,5 @@
 html {
-    background: url(../img/softsoftWebTile%20.jpg);
+    /*background: url(../img/softsoftWebTile%20.jpg);*/
 }
 
 .container {
