--- a/css/style.scss
+++ b/css/style.scss
@@ -56,26 +56,23 @@ nav {
 main {
     form {
         .formGroup {}
-        input[type=text] {
-            width: 100%;
-        }
     }
     img {
         width: 100%;
     }
     p {
         font-size: 20px;
+        margin-top: 20px;
     }
     .date {
         margin: 0 auto;
-        max-width: 400px;
+        max-width: 200px;
         background-color: wheat;
         height: auto;
-        p {
-            text-align: center;
-            font-size: 15px;
-            line-height: 30px;
-        }
+        text-align: center;
+        font-size: 15px;
+        line-height: 30px;
+        border-radius: 20px;
     }
 }
 
@@ -113,7 +110,7 @@ aside {
             margin-left: 20px;
         }
         button {
-            margin-left: 70px;
+            align-content: center;
         }
     }
     h3 {
