--- a/css/style.scss
+++ b/css/style.scss
@@ -39,6 +39,8 @@ nav {
         list-style: none;
         display: inline-block;
         padding: 0 30px;
+        
+        /* &:hover */
     }
     li:hover {
         background-color: wheat;
