--- a/css/style.scss
+++ b/css/style.scss
@@ -39,7 +39,6 @@ nav {
         list-style: none;
         display: inline-block;
         padding: 0 30px;
-        
         /* &:hover */
     }
     li:hover {
@@ -118,7 +117,7 @@ aside {
     h3 {
         margin-top: 40px;
         font-size: 30px;
-        color: lightslategrey
+        color: lightslategrey;
     }
     .infobox {
         p {
